--- a/views/top.ejs
+++ b/views/top.ejs
@@ -230,7 +230,7 @@ var show = function(){  //結果ページを表示する関数
     </header>
 
     <div class="bigimage">
-      <h2>洗濯表示がわからない！</h2>
+      <h2>洗濯表示がわからない!</h2>
       <p>当サイト「洗濯表示チェッカー」は衣類等に記載してある洗濯表示が簡単に確認できるサイトです。</p>
       <p>完全無料で利用できます。結果がすぐにわかります。</p>
       <p>まずは洗濯表示を選択してみましょう！</p>
