--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,21 +226,20 @@
     position: relative;
     top: 70px;
     height: 900px;
-  }
-
-  .mail-content{
+    max-width: 648px;
+    margin: 0 auto;
     color: #444;
   }
 
   .mail-content h2{
     font-size: 30px;
-    margin-left: 372px;
+    margin: 0 auto 20px;
+    width: 180px;
   }
 
   .mail-content ul{
     border: 1px solid #cdcbcb;
     border-radius: 6px;
-    max-width: 650px;
     margin: 0 auto;
     padding: 15px 30px;
     list-style: none;
@@ -250,6 +249,7 @@
   .section{
     margin: 0 auto;
     height: 600px;
+    max-width: 648px;
   }
 
   .section dl{
@@ -258,47 +258,30 @@
   }
 
    .section dd{
-    width: 710px;
-    height: 30px;
     border-radius: 4px;
-    margin: 0 auto;
-    padding-bottom: 30px;
+    margin: 0;
    }
 
-  input{
-    width: 710px;
-    height: 40px;
+  .section input,textarea{
     border-radius: 4px;
     transition: 0.3s;
     border: 1px solid #cdcdcd;
     outline: none;
-    padding: 0;
-    margin: 0;
+    width: 648px;
+    height: 40px;
+    margin-bottom: 15px;
   }
 
-  input:focus {
+  .section textarea{
+    height: 100px;
+  }
+
+  input:focus,textarea:focus {
     border-color: #00BFFF;
   }
 
   .section dt{
-    margin-left: 372px;
-    font-size: 14px;
-    padding-bottom: 4px;
-  }
-
-  textarea{
-    width: 710px;
-    height: 200px;
-    border-radius: 4px;
-    transition: 0.3s;
-    border: 1px solid #cdcdcd;
-    outline: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  textarea:focus {
-    border-color: #00BFFF;
+    margin-bottom: 1px;
   }
 
   .btnWrap button{
@@ -306,9 +289,9 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 710px;
+    width: 648px;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 4px;
     color: #fff;
     background-color: #00BFFF;
     font-size: 1em;
@@ -567,26 +550,14 @@ color: #00BFFF;
     margin-left: 30px;
   }
 
-  .mail-content{
-    margin: 0 auto;
-    width: 648px;
-  }
-
-  .mail-content h2{
-    margin: 0 0 20px;
-    text-align: center;
-  }
-
   .section input, textarea{
-    width: 648px;
   }
 
   .section dt{
-    margin-left: 30px;
   }
 
   .section dd{
-   margin-left: 30px;
+  
   }
 
   .btnWrap button{
@@ -605,8 +576,53 @@ color: #00BFFF;
 
 
 @media screen and (max-width: 480px){  /*最大480pxの場合に適用(スマホ用)*/
+  .bigimage h2{
+    font-size: 30px;
+  }
+
+  .bigimage p{
+    font-size: 14px;
+  }
+  
+  .accordion001,.accordion002,.accordion003,.accordion004,.accordion005,.accordion006{
+    width: 400px;
+  }
+
+  .breadcrumb-001,.breadcrumb-002,.breadcrumb-003,.breadcrumb-004{
+    margin-left: 5px;
+  }
+
+  .mail-content{
+    margin: 0 2px;
+    width: 100%;
+    height: 1000px;
+  }
+
+  .mail-content h2{
+    font-size: 30px;
+  }
+
+  .mail-content ul{
+    font-size: 14px;
+  }
+
+  .about-content{
+    height: 850px;
+    width: 400px;
+    padding: 0px;
+    margin: 0 5px;
+  }
+
+  .about-content h2{
+    font-size: 25px;
+  }
+
+  .about-content p{
+    font-size: 14px;
+  }
+
   .section input, textarea{
-    width: 600px;
+    width: 400px;
   }
 
   .section dt{
@@ -614,6 +630,10 @@ color: #00BFFF;
   }
 
   .section dd{
-   margin-left: 10px;
+    width: 400px;
+  }
+
+  .btnWrap button{
+    width: 400px;
   }
 }
